# moxcms

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build_push.yml
app/: Cargo.toml
app/benches/icc/: main.rs
app/benches/lut/: main.rs
app/benches/math/: main.rs
app/src/: encode_gray_lut.rs  main.rs
assets/: Display P3.icc  Generic Gray Gamma 2.2 Profile.icc  srgb_perceptual.icc
fuzz/: Cargo.toml
fuzz/lut/: lut.rs
fuzz/math/: math.rs
fuzz/safe_read/: safe_read.rs
fuzz/safe_read_create/: safe_read_create.rs
fuzz/unsafe/: unsafe.rs
src/: chad.rs  cicp.rs  clut.rs  dat.rs  defaults.rs  dt_ucs.rs  err.rs  gamma.rs  gamut.rs  helpers.rs  ictcp.rs  jzazbz.rs  jzczhz.rs  lab.rs  lib.rs  luv.rs  math.rs  matrix.rs  mlaf.rs  nd_array.rs  nd_array16.rs  oklab.rs  oklch.rs  profile.rs  reader.rs  rgb.rs  safe_math.rs  safe_reader.rs  stages.rs  tag.rs  transform.rs  trc.rs  writer.rs  yrg.rs
src/conversions/: chunking.rs  cmyk.rs  cmyk2rgb.rs  gray2rgb.rs  gray2rgb_extended.rs  interpolator.rs  lut3.rs  lut3_to_4.rs  lut3x3.rs  lut3x4.rs  lut4.rs  lut_transforms.rs  mab.rs  mab4x3.rs  mba3x4.rs  md_lut.rs  md_luts_factory.rs  mod.rs  prelude_lut_xyz_rgb.rs  rgb2gray.rs  rgb2gray_extended.rs  rgb_xyz_factory.rs  rgbxyz.rs  rgbxyz_fixed.rs  rgbxyz_float.rs  stages.rs  tetrahedral.rs  transform_lut3_to_3.rs  transform_lut3_to_4.rs  transform_lut4_to_3.rs  transform_lut4_to_4.rs
src/conversions/avx/: a_curves3.rs  a_curves4x3.rs  cmyk.rs  cube.rs  hypercube.rs  interpolator.rs  interpolator_q0_15.rs  interpolator_q1_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  lut4_to_3_q1_15.rs  mod.rs  pack.rs  preheat_lut4x3.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  rgb_xyz_q4_12.rs  rgb_xyz_q4_12_opt.rs  stages.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  t_lut3_to_3_q1_15.rs  tetrahedral.rs  transform_lut3_to_3.rs  transform_lut3_to_3_q1_15.rs  util.rs
src/conversions/avx512/: rgb_xyz_opt.rs  rgb_xyz_q2_13_opt.rs
src/conversions/katana/: md3x3.rs  md4x3.rs  md_3xn.rs  md_nx3.rs  md_pipeline.rs  mod.rs  pcs_stages.rs  rgb_xyz.rs  stages.rs  xyz_rgb.rs
src/conversions/neon/: a_curves3.rs  a_curves4x3.rs  cmyk.rs  cube.rs  gamma.rs  hypercube.rs  interpolator.rs  interpolator_q0_15.rs  interpolator_q1_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  lut4_to_3_q1_15.rs  mod.rs  preheat_lut4x3.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q1_30_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  rgb_xyz_q4_12.rs  rgb_xyz_q4_12_opt.rs  stages.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  t_lut3_to_3_q1_15.rs  tetrahedral.rs  transform_lut3_to_3.rs
src/conversions/sse/: cmyk.rs  gamma.rs  interpolator.rs  interpolator_q0_15.rs  interpolator_q1_15.rs  lut4_to_3.rs  lut4_to_3_q0_15.rs  lut4_to_3_q1_15.rs  mod.rs  rgb_xyz.rs  rgb_xyz_opt.rs  rgb_xyz_q2_13.rs  rgb_xyz_q2_13_opt.rs  rgb_xyz_q4_12.rs  rgb_xyz_q4_12_opt.rs  stages.rs  t_lut3_to_3.rs  t_lut3_to_3_q0_15.rs  t_lut3_to_3_q1_15.rs  tetrahedral.rs  transform_lut3_to_3.rs
src/math/: acos.rs  acosf.rs  asin.rs  asinf.rs  atan.rs  atan2.rs  atan2f.rs  atanf.rs  cbrt.rs  cbrtf.rs  common.rs  cosf.rs  coshf.rs  dekker.rs  estrin.rs  exp.rs  exp10.rs  exp10f.rs  exp2.rs  exp2f.rs  expf.rs  float106.rs  float48.rs  floor.rs  hypot.rs  log.rs  log10.rs  log10f.rs  log2.rs  log2f.rs  logf.rs  mod.rs  pow.rs  powf.rs  sin.rs  sincos.rs  sincosf.rs  sinf.rs  sinhf.rs  sqrtf.rs  (+3 more)
