workspace = { members = ["app", "fuzz"] }

[package]
name = "moxcms"
version = "0.5.3"
edition = "2024"
description = "Simple Color Management in Rust"
readme = "./README.md"
keywords = ["icc", "cms", "color", "cmyk"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/moxcms"
categories = ["multimedia::images"]
homepage = "https://github.com/awxkee/moxcms"
repository = "https://github.com/awxkee/moxcms.git"
exclude = ["*.jpg", "../../assets/*", "*.png", "*.icc", "./assets/*"]
rust-version = "1.85.0"

[dependencies]
chrono = "0.4"
num-traits = "0.2"

[dev-dependencies]
rand = "0.9"

[features]
# If no unsafe intrinsics active then `forbid(unsafe)` will be used.
default = ["avx", "sse", "neon"]
# Enables AVX2 acceleration where possible
avx = []
# Enables SSE4.1 acceleration where possible
sse = []
# Enables NEON intrinsics where possible
neon = []
# Allows configuring interpolation methods and LUT weights precision.
# Disabled by default to prevent binary bloat.
options = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open --manifest-path ./Cargo.toml
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.profiling]
inherits = "release"
debug = true
