[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.5"
moxcms = {path = "../", default-features = false, features = ["neon", "options", "sse", "avx"]}
lcms2 = "6.1.0"
#jxl-oxide = {path = "../../../RustroverProjects/jxl-oxide/crates/jxl-oxide", features = ["moxcms", "lcms2"]}
zune-jpeg = "0.5.0-rc2"
qcms = "0.3.0"
rand = "0.9.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
libm = "0.2.11"

[[bench]]
name = "math"
harness = false

[[bench]]
name = "icc"
harness = false
