[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
image = {version = "0.25.5", default-features = false}
moxcms = {path = "../", default-features = false, features = ["neon", "options", "sse", "avx" ,"avx512"]}
lcms2 = "6.1.0"
#jxl-oxide = {path = "../../../RustroverProjects/jxl-oxide/crates/jxl-oxide", features = ["moxcms", "lcms2"]}
zune-jpeg = "0.5.0-rc2"
qcms = "0.3.0"
rand = "0.9.0"
libm = "0.2.15"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "icc"
harness = false
