[package]
name = "app-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.moxcms]
path = ".."
features = ["options"]

[features]
default = ["moxcms/options"]
avx = ["moxcms/avx"]
sse = ["moxcms/sse"]
neon = ["moxcms/neon"]

[[bin]]
name = "unsafe"
path = "unsafe/unsafe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "safe_read"
path = "safe_read/safe_read.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lut"
path = "lut/lut.rs"
test = false
doc = false
bench = false